# fitnudge

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml
agent/: orchestrator.py  tools.py
agent/prompts/: orchestrator_system.py
db/: models.py  queries.py  schema.sql
docs/: PHASES.md
kakao/: auth.py  calendar.py  location.py  message.py
routes/: auth.py  internal.py  webhook.py
scheduler/: jobs.py  triggers.py
utils/: haversine.py  message_guard.py  time_utils.py
