[project]
name = "fitnudge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.13.3",
    "apscheduler==3.10.4",
    "asyncpg==0.30.0",
    "cryptography==43.0.3",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "langchain==0.3.1",
    "langchain-anthropic==0.2.3",
    "langchain-community==0.3.1",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "redis[hiredis]==5.1.1",
    "sqlalchemy[asyncio]==2.0.35",
    "uvicorn[standard]==0.30.6",
]
